# llamasql

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  Makefile  README.md  README_NEW.md  STANDARDIZATION_PLAN.md  api_client_demo.py  api_launcher.py  commands.sh  demo_script.py  install.sh  llamadb_master.sh  llamadb_setup.sh  main.sh  main.sh.bak  main_fixed.sh  mkdocs.yml  pyproject.toml  quickstart.py  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  setup_dev_environment.sh  test_llamadb.py
.github/workflows/: ci.yml
deployment/kubernetes/: llamadb-deployment.yaml  llamadb.yaml
docs/: ROADMAP.md  api.md  examples.md  index.html  index.md  installation.html  installation.md  usage.html  usage.md
docs/api/: core.md  index.html  index.md
docs/assets/: README.md  (+2 more)
examples/: .env.example  DEPLOYMENT.md  Dockerfile  Dockerfile.web  README-loaders.md  README-rag.md  README-web-app.md  basic_usage.py  custom_document_loader.py  docker-compose.web.yml  docker-compose.yml  migrations_example.py  rag_example.py  rag_web_app.py  requirements.txt  run_web_app.ps1  run_web_app.sh  semantic_search_example.py  start_web_docker.ps1  start_web_docker.sh  update_requirements.txt
llamasql/: __init__.py  client.py  main.py  utils.py
python/: setup.py
rust_extensions/llamadb_core/: Cargo.toml
rust_extensions/llamadb_core/src/: lib.rs
scripts/: anthropic_demo.py  generate_diagrams.sh  vector_index_demo.py
tests/: test_accelerated_ops.py  test_client.py  test_main.py  test_mlx_acceleration.py  test_query.py
(+36 files in other folders)
